k8s/base/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: redpanda
  labels:
    name: redpanda
    app: redpanda
    environment: production
